--- a/img pp.ipynb
+++ b/img pp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "datadir_path = \"./data/05dzgcM/\""
+    "datadir_path = \"./data/05dzgcM/\"\n",
+    "# datadir_path = \"./data/luna sample/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -74,13 +75,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Paul\\Anaconda3\\envs\\test367\\lib\\site-packages\\skimage\\transform\\_warps.py:110: UserWarning: Anti-aliasing will be enabled by default in skimage 0.15 to avoid aliasing artifacts when down-sampling images.\n",
+      "  warn(\"Anti-aliasing will be enabled by default in skimage 0.15 to \"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Shape before resampling\t (131, 512, 512)\n",
       "Shape after resampling\t (328, 364, 364)\n",
-      "CPU times: user 3.59 s, sys: 280 ms, total: 3.87 s\n",
-      "Wall time: 3.87 s\n"
+      "Wall time: 5.37 s\n"
      ]
     }
    ],
@@ -332,7 +340,7 @@
     "        newshape = np.round(np.array(mask.shape)*spacing/resolution)\n",
     "        xx,yy,zz= np.where(mask)\n",
     "        box = np.array([[np.min(xx),np.max(xx)],[np.min(yy),np.max(yy)],[np.min(zz),np.max(zz)]])\n",
-    "        box = box*np.expand_dims(spacing,1)/np.expand_dims(resolution,1)\n",
+    "#         box = box*np.expand_dims(spacing,1)/np.expand_dims(resolution,1)\n",
     "        box = np.floor(box).astype('int')\n",
     "        margin = 1\n",
     "        extendbox = np.vstack([np.max([[0,0,0],box[:,0]-margin],0),np.min([newshape,box[:,1]+2*margin],axis=0).T]).T\n",
@@ -539,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
